<resources>
    <string name="app_name">Nuro</string>

    <!-- Bottom navigation menu -->
    <string name="title_schedule">Schedule</string>
    <string name="title_decks">Decks</string>
    <string name="title_activity">Activities</string>
    <string name="title_help">Help</string>
    <string name="title_train">Train</string>

    <string name="page_title_fragment_schedule">Visual Scheduling</string>
    <string name="fab_text_fragment_schedule">Add task</string>
    <string name="choose_day_text_view_text_fragment_schedule">Choose day</string>
    <string name="empty_day_text_view_text_fragment_schedule">There are no tasks for this day of the week. Click the Add task button to add a new task.</string>
    <string name="mark_all_as_pending_task_button_text_fragment_schedule">Mark all as pending</string>
    <string name="start_task_button_text_fragment_schedule">Start task</string>
    <string name="pause_task_button_text_fragment_schedule">Pause task</string>
    <string name="continue_task_button_text_fragment_schedule">Continue task</string>
    <string name="completed_timer_text_view_text_fragment_schedule">Time\'s up!</string>
    <string name="reset_task_button_text_fragment_schedule">Reset</string>
    <string name="mark_as_done_check_box_text_fragment_schedule">Mark as done</string>

    <string name="page_title_fragment_add_task">Add task</string>
    <string name="name_edit_text_hint_fragment_add_task">Name</string>
    <string name="instruction_edit_text_hint_fragment_add_task">Instruction</string>
    <string name="select_start_time_button_text_fragment_add_task">Select start time</string>
    <string name="duration_text_view_text_fragment_add_task">Enter the duration</string>
    <string name="duration_hour_edit_text_hint_fragment_add_task">No. of hrs</string>
    <string name="duration_minute_edit_text_hint_fragment_add_task">No. of mins</string>
    <string name="select_image_button_text_fragment_add_task">Select image</string>
    <string name="image_view_content_description_fragment_add_task">Image for the new task</string>
    <string name="add_task_button_text_fragment_add_task">Add</string>

    <string name="page_title_fragment_edit_task">Edit task</string>
    <string name="name_edit_text_hint_fragment_edit_task">Name</string>
    <string name="instruction_edit_text_hint_fragment_edit_task">Instruction</string>
    <string name="select_start_time_button_text_fragment_edit_task">Select start time</string>
    <string name="duration_text_view_text_fragment_edit_task">Enter the duration</string>
    <string name="duration_hour_edit_text_hint_fragment_edit_task">No. of hrs</string>
    <string name="duration_minute_edit_text_hint_fragment_edit_task">No. of mins</string>
    <string name="select_image_button_text_fragment_edit_task">Select image</string>
    <string name="image_view_content_description_fragment_edit_task">Image for the task</string>
    <string name="edit_task_button_text_fragment_edit_task">Edit</string>

    <string name="page_title_fragment_deck">Decks</string>
    <string name="fab_text_fragment_deck">Add deck</string>
    <string name="zero_deck_text_view_text_fragment_deck">There are no decks in the database. Click the Add deck button to add a new deck.</string>

    <string name="page_title_fragment_add_deck">Add deck</string>
    <string name="name_edit_text_hint_fragment_add_deck">Name</string>
    <string name="description_edit_text_hint_fragment_add_deck">Description</string>
    <string name="select_image_button_text_fragment_add_deck">Select cover image</string>
    <string name="image_view_content_description_fragment_add_deck">Cover image for the new deck</string>
    <string name="add_deck_button_text_fragment_add_deck">Add</string>

    <string name="page_title_fragment_edit_deck">Edit deck</string>
    <string name="name_edit_text_hint_fragment_edit_deck">Name</string>
    <string name="description_edit_text_hint_fragment_edit_deck">Description</string>
    <string name="select_image_button_text_fragment_edit_deck">Select cover image</string>
    <string name="image_view_content_description_fragment_edit_deck">Cover image for the deck</string>
    <string name="edit_deck_button_text_fragment_edit_deck">Edit</string>

    <string name="page_title_fragment_card">Flash cards</string>
    <string name="fab_text_fragment_card">Add card</string>
    <string name="empty_deck_text_view_text_fragment_card">There are no cards in this deck. Click the Add card button to add a new flash card.</string>
    <string name="show_answer_button_text_fragment_card">Show answer</string>
    <string name="hide_answer_button_text_fragment_card">Hide answer</string>

    <string name="page_title_fragment_add_card">Add card</string>
    <string name="caption_edit_text_hint_fragment_add_card">Caption</string>
    <string name="short_answer_edit_text_hint_fragment_add_card">Short answer</string>
    <string name="select_image_button_text_fragment_add_card">Select image</string>
    <string name="image_view_content_description_fragment_add_card">Image for the new flash card</string>
    <string name="add_card_button_text_fragment_add_card">Add</string>

    <string name="page_title_fragment_edit_card">Edit card</string>
    <string name="caption_edit_text_hint_fragment_edit_card">Caption</string>
    <string name="short_answer_edit_text_hint_fragment_edit_card">Short answer</string>
    <string name="select_image_button_text_fragment_edit_card">Select image</string>
    <string name="image_view_content_description_fragment_edit_card">Image for the flash card</string>
    <string name="edit_card_button_text_fragment_edit_card">Edit</string>

    <string name="page_title_fragment_activity">Activities</string>
    <string name="image_identification_activity_title_fragment_activity">Image identification activity</string>
    <string name="image_identification_activity_description_fragment_activity">Find the correct image among four options that is associated with the given word</string>
    <string name="word_identification_activity_title_fragment_activity">Word identification activity</string>
    <string name="word_identification_activity_description_fragment_activity">Find the correct word among four options that is associated with the given image</string>

    <string name="page_title_fragment_image_identification">Image identification</string>
    <string name="action_play_sound_fragment_image_identification">Play appreciation sounds</string>
    <string name="choose_deck_text_view_text_fragment_image_identification">Choose deck</string>
    <string name="play_sound_check_box_text_fragment_image_identification">Play appreciation sounds for correct answers</string>
    <string name="identify_question_text_view_text_fragment_image_identification">Identify %1$s</string>
    <string name="choose_answer_text_view_text_fragment_image_identification">Choose your answer</string>
    <string name="first_button_text_fragment_image_identification">First image</string>
    <string name="second_button_text_fragment_image_identification">Second image</string>
    <string name="third_button_text_fragment_image_identification">Third image</string>
    <string name="fourth_button_text_fragment_image_identification">Fourth image</string>
    <string name="submit_button_text_fragment_image_identification">Submit</string>
    <string name="next_button_text_fragment_image_identification">Next</string>

    <string name="page_title_fragment_word_identification">Word identification</string>
    <string name="action_play_sound_fragment_word_identification">Play appreciation sounds</string>
    <string name="choose_deck_text_view_text_fragment_word_identification">Choose deck</string>
    <string name="play_sound_check_box_text_fragment_word_identification">Play appreciation sounds for correct answers</string>
    <string name="identify_question_text_view_text_fragment_word_identification">Identify the below image</string>
    <string name="choose_answer_text_view_text_fragment_word_identification">Choose your answer</string>
    <string name="submit_button_text_fragment_word_identification">Submit</string>
    <string name="next_button_text_fragment_word_identification">Next</string>

    <string name="page_title_fragment_help">Help</string>
    <string name="fab_text_fragment_help">Add help card</string>
    <string name="choose_deck_text_view_text_fragment_help">Choose deck</string>
    <string name="empty_deck_text_view_text_fragment_help">There are no help cards in this deck. Click the Add help card button to add a new help card.</string>

    <string name="page_title_fragment_add_help_card">Add help card</string>
    <string name="name_edit_text_hint_fragment_add_help_card">Name</string>
    <string name="select_image_button_text_fragment_add_help_card">Select image</string>
    <string name="image_view_content_description_fragment_add_help_card">Image for the new help card</string>
    <string name="add_help_card_button_text_fragment_add_help_card">Add</string>

    <string name="page_title_fragment_edit_help_card">Edit help card</string>
    <string name="name_edit_text_hint_fragment_edit_help_card">Name</string>
    <string name="select_image_button_text_fragment_edit_help_card">Select image</string>
    <string name="image_view_content_description_fragment_edit_help_card">Image for the help card</string>
    <string name="edit_help_card_button_text_fragment_edit_help_card">Edit</string>

    <string name="page_title_fragment_train">Train</string>
    <string name="choose_deck_text_view_text_fragment_train">Choose deck</string>
    <string name="empty_deck_text_view_text_fragment_train">There are no cards to be reviewed in this deck now.</string>
    <string name="review_done_text_view_text_fragment_train">You\'ve successfully reviewed all cards in this deck.</string>
    <string name="what_answer_text_view_text_fragment_train">Can you recall the answer?</string>
    <string name="show_answer_button_text_fragment_train">Show answer</string>
    <string name="review_question_text_view_text_fragment_train">Review this card based on the difficulty in recalling the answer</string>
    <string name="option1_button_text_fragment_train">Ignore attempt</string>
    <string name="option2_button_text_fragment_train">Learn again</string>
    <string name="option3_button_text_fragment_train">Feels familiar</string>
    <string name="option4_button_text_fragment_train">Good</string>
    <string name="option5_button_text_fragment_train">Easy</string>
    <string name="next_button_text_fragment_train">Next</string>

    <!-- Common strings -->
    <string name="action_edit_text">Edit</string>
    <string name="action_delete_text">Delete</string>
    <string name="action_cancel_text">Cancel</string>
</resources>